# agent-mvp

./: .env.template  .gitignore  Cargo.toml  Dockerfile.bridge  Dockerfile.gateway  docker-compose.yml
.openclaw/: desktop-config.json  openclaw.json  openclaw.json.bak  openclaw.json.bak.1  openclaw.json.bak.3  openclaw.json.bak.4  update-check.json
.openclaw/telegram/: update-offset-default.json
scripts/: bootstrap.sh  decrypt-env.sh  encrypt-env.sh  health-check.sh  rotate-secrets.sh
src-bridge/: Cargo.toml
src-bridge/src/: auth.rs  auto_token.rs  main.rs  routes.rs
src-core/: Cargo.toml
src-core/src/: constants.rs  fs_utils.rs  lib.rs  state.rs
src-core/src/commands/: agent.rs  bootstrap.rs  config.rs  cron.rs  device.rs  docker.rs  health.rs  logs.rs  mod.rs  moltbook.rs  pairing.rs  plugins.rs  skills.rs  usage.rs  vault.rs
src-core/src/security/: audit.rs  mod.rs  sanitize.rs
src-tauri/: Cargo.toml
web/: index.html
web-console/: index.html
web-console/assets/: AgentManager-CpXtf4fq.js  AnalyticsDashboard-CSAb1Egq.js  ChannelManager-BmpLOP6n.js  ChatView-Dkshttn4.js  ConfirmDialog-BoXiTj0F.js  CronBuilder-Cez-p3j_.js  Dashboard-R0cjCAKk.js  DiscordSetup-B1ihDJlI.js  ExternalLink-CajcdnyV.js  FileManager-C3Fua9ax.js  Guide-h7AYIgiS.js  HelpTip-Bf0ngYP4.js  LogViewer-DgfgCl-e.js  MemoryViewer-CLaex6Q2.js  ModelManager-DUALk3se.js  MoltbookDeploy-BXlznrpz.js  NotFound-DsnS1O8I.js  OnboardingWizard-A_B9pzDR.js  PluginManager-ysTfuWEI.js  SecureInput-BOCeOhgm.js  SecurityDashboard-CKA_DXPZ.js  Settings-CLJhy9XZ.js  SkillsMarketplace-B3t35xzT.js  SlackSetup-ek3MYwrN.js  TelegramSetup-BhHXh9sl.js  UsageDashboard-BssfJW5v.js  VaultManager-Buj9tC1z.js  arrow-left-C5yC48ji.js  check-BnfHjeKt.js  circle-alert-ChFoNBvB.js  config-DtO68tKR.js  external-link-uNC8GDDT.js  eye-D6E-mqI1.js  file-text-2xaGoTCx.js  filesystem-qjLUdkNf.js  index-BmrRr2YK.js  index-C-bnBz93.js  index-C5fSXSG5.js  index-DLzrVyEL.js  label-N6WvVUTh.js  (+20 more)
web/assets/: AgentManager-CNCQ6sdm.js  AnalyticsDashboard-Cq3YcUwx.js  ChannelManager-CcC0RjuC.js  ChatView-BlihIQ1V.js  ConfirmDialog-BB-GzuEA.js  CronBuilder-BgXAasyX.js  Dashboard-C02umtg1.js  DiscordSetup-DgtQFXZg.js  ExternalLink-DShwraXM.js  FileManager-DM3Igsn2.js  Guide-DirmREfc.js  HelpTip-C9GnilBF.js  LogViewer-usskj59z.js  MemoryViewer-BDpKUqRs.js  ModelManager-B23Nl7n1.js  MoltbookDeploy-CY_bZDdA.js  NotFound-CIDT27Wr.js  OnboardingWizard-Ba8zRdAv.js  PluginManager-D_VP7pOT.js  SecureInput-g-y9d4Mj.js  SecurityDashboard-DlR07ErB.js  Settings-DGr_QCr5.js  SkillsMarketplace-8d1Fmaai.js  SlackSetup-CauAeUTx.js  TelegramSetup-DDzOc8Bi.js  UsageDashboard-DmXbPTOZ.js  VaultManager-DC96xAyt.js  arrow-left-Pa98Ocwk.js  check-B844v-9Y.js  circle-alert-TK_f88gB.js  config-CjXRnFJJ.js  external-link-BkKpxokb.js  eye-xZN8o4kq.js  file-text-ClZp36Wp.js  (+29 more)
(+42 files in other folders)
