[package]
name = "agentic-console-bridge"
version = "1.1.1"
edition = "2021"

[[bin]]
name = "agentic-bridge"
path = "src/main.rs"

[dependencies]
agentic-console-core = { path = "../src-core" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio-tungstenite = "0.24"
futures-util = "0.3"
