[package]
name = "agentic-console-core"
version = "1.1.1"
edition = "2021"
description = "Shared core library for Agentic Console"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sha2 = "0.10"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["pem"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
