[package]
name = "agentic-console"
version = "1.1.1"
edition = "2021"
description = "Agentic Console — privacy-first AI agent platform"
authors = ["Agentic Console"]
repository = "https://github.com/Potterhead007/openclaw-desktop"
license = "LicenseRef-Proprietary"

[lib]
name = "agentic_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agentic-console-core = { path = "../src-core" }
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sha2 = "0.10"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["pem"] }
base64 = "0.22"
tauri-plugin-opener = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
