[package]
name = "agentic-console"
version = "1.1.1"
edition = "2021"
description = "Agentic Console — privacy-first AI agent platform"
authors = ["Agentic Console"]
repository = "https://github.com/Potterhead007/openclaw-desktop"
license = "LicenseRef-Proprietary"

[lib]
name = "agentic_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agentic-console-core = { path = "../src-core" }
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
